--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <kdb>K</kbd>
            </div>
         </div>
-        <audio data-key="65" src="sounds/do.wav"></audio>
+        <audio data-key="65" src="sounds/Do.wav"></audio>
         <audio data-key="83" src="sounds/re.wav"></audio>
         <audio data-key="68" src="sounds/mi.wav"></audio>
-        <audio data-key="70" src="sounds/fa.wav"></audio>
-        <audio data-key="71" src="sounds/so.wav"></audio>
-        <audio data-key="72" src="sounds/la.wav"></audio>
+        <audio data-key="70" src="sounds/Fa.wav"></audio>
+        <audio data-key="71" src="sounds/So.wav"></audio>
+        <audio data-key="72" src="sounds/La.wav"></audio>
         <audio data-key="74" src="sounds/si.wav"></audio>
-        <audio data-key="75" src="sounds/do-octave.wav"></audio>
+        <audio data-key="75" src="sounds/Do-octave.wav"></audio>
         <audio data-key="76" src="sounds/0m-048-C3.wav"></audio>
         <audio data-key="80" src="sounds/0m-051-D#3.wav"></audio>
     </body>
